Fix default squeezable applying industry alignment twice

--- a/website/src/assets/app.css
+++ b/website/src/assets/app.css
@@ -194,6 +194,10 @@ body.overlay {
     transform: var(--overlay-line-height-adjust, translate(0, -0.0925em));
     --translate-y: -0.0925em;
 }
+/* Squeezable passes industry alignment down */
+.squeezable.industry-align {
+    transform: none;
+}
 
 h1.big {
     font-size: 4em;
